task-row: show row when drag fails

When a task is being draged out of the window or into the GtdEditPane it
disappears from the task list until the list is reopened.

https://bugzilla.gnome.org/show_bug.cgi?id=773562